# 3DComputerGraphicWithOpenGL

./: README.md  README.txt  css.txt  skin.txt
3DComputerGraphicWithOpenGL/: 3DComputerGraphicWithOpenGL.sln  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
3DComputerGraphicWithOpenGL/3DComputerGraphicWithOpenGL/: 3DComputerGraphicWithOpenGL.vcxproj  3DComputerGraphicWithOpenGL.vcxproj.filters  imgui.ini
3DComputerGraphicWithOpenGL/3DComputerGraphicWithOpenGL/Resource/: InputAndDescription_Part2.txt  InputAndDescription_Part3.txt  InputAndDescription_Part4.txt  TableOfContents.txt
3DComputerGraphicWithOpenGL/3DComputerGraphicWithOpenGL/Source/: 3DComputerGraphicWithOpenGL.cpp  3DComputerGraphicWithOpenGL.h  Common.cpp  Common.h  CoreMinimal.h
3DComputerGraphicWithOpenGL/3DComputerGraphicWithOpenGL/Source/Manager/: ResourceManager.cpp  ResourceManager.h  (+2 more)
3DComputerGraphicWithOpenGL/Include/: tiny_obj_loader.h
3DComputerGraphicWithOpenGL/Include/ImGui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
3DComputerGraphicWithOpenGL/Include/glad/: glad.h
3DComputerGraphicWithOpenGL/InsideDynamicMathLibrary/: InsideDynamicMathLibrary.def  InsideDynamicMathLibrary.vcxproj  InsideDynamicMathLibrary.vcxproj.filters
3DComputerGraphicWithOpenGL/InsideDynamicMathLibrary/Source/: InsideDynamicMath.cpp  InsideDynamicMath.h
3DComputerGraphicWithOpenGL/InsideStaticMathLibrary/: InsideStaticMathLibrary.vcxproj
3DComputerGraphicWithOpenGL/InsideStaticMathLibrary/Source/: InsideStaticMath.h
(+64 files in other folders)
